# rl-locomotion

./: .gitignore  .pre-commit-config.yaml  BUILD_ROADMAP.md  LICENSE  README.md  pyproject.toml
docs/: nvidia-smi-baseline.txt  setup.md
scripts/: hello.py  play_teacher.py  roll_random_policy.py  train_teacher.py
src/rl_locomotion/: __init__.py
src/rl_locomotion/deploy/: __init__.py
src/rl_locomotion/env/: __init__.py  go2_flat_cfg.py
src/rl_locomotion/eval/reality_gap/: __init__.py
src/rl_locomotion/policy/: __init__.py
src/rl_locomotion/policy/student/: __init__.py
src/rl_locomotion/policy/teacher/: __init__.py
src/rl_locomotion/randomization/: __init__.py
src/rl_locomotion/reward/: __init__.py  foot_slip.py  go2_rewards_cfg.py
src/rl_locomotion/terrain/: __init__.py
src/rl_locomotion/training/: __init__.py
src/rl_locomotion/training/distill/: __init__.py
src/rl_locomotion/training/ppo/: __init__.py  go2_ppo_cfg.py
tests/: test_imports.py  test_rewards.py
