[project]
name = "rl-locomotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karan Anchan", email = "Kar.anchan02@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
rl-locomotion = "rl_locomotion:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort (import sorting)
    "B", # bugbear (common bugs)
    "UP", # pyupgrade (upgrade syntax for newer Python versions)
    "N", # pep8-naming
    "D"  # pydocstyle (docstring style)
]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
